[metadata]
name = pycathy
version = 0.0.1
author = B.Mary
author_email = benjamin.mary@unipd.it
description = pyCATHY is a Python package to create, run, and post-process CATHY forward and inverse models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenjMy/pycathy_wrapper
project_urls =
    Bug Tracker = https://github.com/BenjMy/pycathy_wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

install_requires =
    numpy
    pandas
    scipy
    pyvista
    soiltexture
    SALib
    
[options.packages.find]
where = pyCATHY
