[metadata]
name = pycathy-wrapper
version = 0.1.4
author = B.Mary
author_email = benjamin.mary@ica.csic.es
description = pyCATHY is a Python package to create, run, and post-process CATHY forward and inverse models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenjMy/pycathy_wrapper
project_urls =
    Bug Tracker = https://github.com/BenjMy/pycathy_wrapper/issues
keywords = hydrogeophysic, Data Assimilation, hydrology

classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,

[options]
zip_safe = True
include_package_data = False
packages = find:
python_requires = >=3.7
use_scm_version = True
install_requires =
    numpy
    pandas
    scipy
    pyvista
    SALib
    GitPython
    soiltexture
    pyvistaqt
    itkwidgets
    rosetta-soil
    rich
    natsort
    ipywidgets
    smmap
    shapely
    imageio
    nltk
    geopandas
    rioxarray
    pyyaml

[options.packages.find]
exclude =
    tests

